--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,56 +15,100 @@
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <body >
+    <div class="position-relative w-100 bottom-50 start-0" id="slider">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+            {% for photo in photos %}
+                <div class="carousel-item {% if photo.ordre == 1 %} active {% endif %}" data-bs-interval="5000">
+                <img src="{{ asset('upload/')}}{{ photo.photo }}" class="d-block w-100" style="height:50vh; object-fit:cover;" alt="image">
+            <div class="text-center carousel-caption d-none d-md-block" style="object-fit:cover;">
+            <a href="#" class="btn btn-secondary mb-5"><b>HotelHouse</b> | Découvrez nos chambres</a>
+            </div>
+                </div>
+            {% endfor %}
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top bg-transparent">
             <div class="container-fluid">
                 <a class="navbar-brand" href="{{ path('app_app') }}"><b>HotelHouse</b></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse bg-transparent text-dark" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="{{ path('chambre') }}#room"><b>Chambre</b></a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ path('restaurant') }}#resto"><b>Restaurant</b></a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ path('spa') }}#spa"><b>Spa</b></a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ path('app_app') }}#ici"><b>Réservation</b></a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ path('avis') }}#avis"><b>Avis</b></a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ path('hotel') }}#hotel"><b>L'Hôtel</b></a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ path('actualites') }}#actu"><b>Actualités</b></a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ path('contact') }}#contact"><b>Contact</b></a></li>
+                    </ul>
+                    <ul class="navbar-nav align-content-end">
                         {% if is_granted('ROLE_ADMIN') %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_admin') }}"><b>BACKOFFICE</b></a>
+                            <a class="nav-link" href="{{ path('admin') }}"><b>BACKOFFICE</b></a>
                         </li>
                         {% endif %}
                         {% if app.user %}
                         <li class="nav-item">
-                            {# <a class="nav-link"href=" {{ path('app_profil') }} ">Profil</a> #}
-                        </li>
-                        <li class="nav-item">
-                            {# <a class="nav-link"href=" {{ path('app_cart') }} ">Panier</a> #}
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
+                            <a class="nav-link" href="{{ path('app_logout') }}"><b>Déconnexion</b></a>
                         </li>
                         {% else %}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Se connecter / S'inscrire
+                                <b>Se connecter / S'inscrire</b>
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="{{ path('app_login') }}">Connexion</a></li>
-                                <li><a class="dropdown-item" href="{{ path('app_register') }}">Création de compte</a></li>
+                                <li><a class="dropdown-item" href="{{ path('app_login') }}"><b>Connexion</b></a></li>
+                                <li><a class="dropdown-item" href="{{ path('app_register') }}"><b>Création de compte</b></a></li>
                             </ul>
                         </li>
                         {% endif %}
+                        <li class="nav-item"><a class="nav-link" href="#"><img src="image/france.png" alt="" width="20px"></a></li>
+                        <li class="nav-item"><a class="nav-link" href="#"><img src="image/royaume-uni.png" alt="" width="20px"></a></li>
                     </ul>
                 </div>
             </div>
         </nav>
-
         <div class="container">
-        {% for label, msgs in app.flashes %}
-            {% for msg in msgs %}
-            <div class="alert alert-{{ label }} text-center">
-                {{ msg }}
-            </div>
-            {% endfor %}
-        {% endfor %}
         {% block body %}{% endblock %}
-            </div>
+        {% block footer %}
+        <div class="bg-light fixed-bottom bg-transparent position-relative w-100 bottom-20 start-0"><hr></div>
+        <a href="/#ici">
+        <button id="ici" class="border border-transparent" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        <b>Réserver une chambre !!! 
+        <blink id="blink">CLIQUE ICI
+        <style>
+          #blink {
+          animation: blink 1s infinite;
+          }
+          @keyframes blink { 
+            0% { opacity:0; }
+            50% { opacity:1; } 
+            100% { opacity:0; }
+          }
+        </style>
+        </blink> ♪
+        </b>
+      </button></a></div>{% endblock %}
+        </div><hr>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
 </html>
