--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -10,12 +10,20 @@
             novalidate: 'novalidate'
         }
         }) }}
-        {{ form_row(registrationForm.pseudo) }}
-        {{ form_row(registrationForm.civilite) }}
-        {{ form_row(registrationForm.nom) }}
-        {{ form_row(registrationForm.prenom) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword) }}
+        <div class="row col-12">
+            <div class="col-6">
+                {{ form_row(registrationForm.pseudo) }}
+            {{ form_row(registrationForm.nom) }}
+            </div>
+            <div class="col-6">
+                {{ form_row(registrationForm.civilite) }}
+            {{ form_row(registrationForm.prenom) }}
+            </div>
+            <div class="col-12">
+            {{ form_row(registrationForm.email) }}
+            {{ form_row(registrationForm.plainPassword) }}
+            </div>
+        </div>
 <hr>
         <button type="submit" class="btn btn-secondary col-12">S'enregistrer</button>
     {{ form_end(registrationForm) }}
