--- a/templates/app/view/hotel.html.twig
+++ b/templates/app/view/hotel.html.twig
@@ -2,7 +2,11 @@
 
 {% block title %}Hôtel{% endblock %}
 {% block body %}
-<center id="hotel"><h1>Hôtel</h1></center>
+<center id="hotel"><h1>Accès Hôtel</h1>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.6400071726666!2d2.2998843518206273!3d48.86507470808737!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fdd0dd39a4d%3A0x508194b82b12f012!2s1%20Av.%20Montaigne%2C%2075008%20Paris!5e0!3m2!1sfr!2sfr!4v1666335525610!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+
+</center>
 
 
 
