--- a/templates/app/view/legal.html.twig
+++ b/templates/app/view/legal.html.twig
@@ -4,6 +4,129 @@
 {% block body %}
 <center id="mention"><h1>Mentions légales</h1></center>
 
+<table>
+<caption><strong>Les mentions obligatoires sur votre site internet</strong></caption>
+  <tbody>
+    <tr>
+    <th scope="row"> </th>
+    <th scope="col">Pour une personne physique (micro-entreprise ou entreprise individuelle)</th>
+    <th scope="col">Pour une personne morale (société)</th>
+    </tr>
+    </tbody>
+    <tbody>
+    <tr>
+    <th scope="row">Votre identité</th>
+    <td>nom et prénom</td>
+    <td>
+    <ul>
+    <li>raison sociale</li>
+    <li>forme juridique</li>
+    <li>montant du capital social</li>
+    </ul>
+    </td>
+    </tr>
+    <tr>
+    <th rowspan="1" scope="row">Vos coordonnées</th>
+    <td>
+    <ul>
+    <li>adresse du domicile</li>
+    <li>adresse de courrier électronique ou numéro de téléphone pour contacter votre entreprise</li>
+    </ul>
+    </td>
+    <td>
+    <ul>
+    <li>adresse du siège social</li>
+    <li>adresse de courrier électronique ou numéro de téléphone pour contacter votre entreprise</li>
+    </ul>
+    </td>
+    </tr>
+    <tr>
+    <th scope="row">Les mentions relatives à la propriété intellectuelle</th>
+    <td>
+    <ul>
+    <li>Si vous utilisez des <strong>images, illustrations, photographies</strong> :  vous devez faire figurer leur propriété intellectuelle</li>
+    <li>Pour les <strong>textes</strong> qui ne sont pas les vôtres vous devez recueillir l’autorisation de l’auteur ou tout du moins citer la source du texte</li>
+    </ul>
+    </td>
+    <td>
+    <ul>
+    <li>Si vous utilisez des <strong>images, illustrations, photographies</strong> :  vous devez faire figurer leur propriété intellectuelle</li>
+    <li>Pour les <strong>textes</strong> qui ne sont pas les vôtres vous devez recueillir l’autorisation de l’auteur ou tout du moins citer la source du texte</li>
+    </ul>
+    </td>
+    </tr>
+    <tr>
+    <th scope="row">Les mentions relatives à l’hébergement du site</th>
+    <td>
+    <p>Vous devez prévoir une page relative aux mentions légales qui doit inclure des informations relatives à l’hébergement du site (même si le site est hébergé à titre gratuit)</p>
+    <p>Ces mentions portent sur :</p>
+    <ul>
+    <li>le nom de l’hébergeur</li>
+    <li>la raison sociale</li>
+    <li>l’adresse</li>
+    <li>le numéro de téléphone.</li>
+    </ul>
+    </td>
+    <td>
+    <p>Vous devez prévoir une page relative aux mentions légales qui doit inclure des informations relatives à l’hébergement du site (même si le site est hébergé à titre gratuit)</p>
+    <p>Ces mentions portent sur :</p>
+    <ul>
+    <li>le nom de l’hébergeur</li>
+    <li>la raison sociale</li>
+    <li>l’adresse</li>
+    <li>le numéro de téléphone.</li>
+    </ul>
+    </td>
+  </tr>
+  </tbody>
+</table>
+<table>
+  <caption><strong>Les mentions obligatoires complémentaires selon votre activité</strong></caption>
+  <tbody>
+    <tr>
+      <th scope="row">Pour les activités commerciales</th>
+      <td>
+      <ul>
+      <li>numéro d’inscription au registre du commerce et des sociétés (RCS)</li>
+      <li>numéro individuel d’identification (le numéro de TVA intracommunautaire) le cas échéant</li>
+      </ul>
+      </td>
+      </tr>
+      <tr>
+      <th scope="row">Pour les sites marchands</th>
+      <td>conditions générales de vente (CGV)</td>
+      </tr>
+      <tr>
+      <th scope="row">Pour les activités artisanales</th>
+      <td>numéro d’immatriculation au répertoire des métiers (RM)</td>
+      </tr>
+      <tr>
+      <th scope="row">Pour les sites d’information</th>
+      <td>
+      <ul>
+      <li>nom du directeur de la publication</li>
+      <li>nom du responsable de la rédaction le cas échéant</li>
+      <li>coordonnées de l’hébergeur du site</li>
+      </ul>
+      </td>
+      </tr>
+      <tr>
+      <th scope="row">Pour les activités soumises à régime d'autorisation</th>
+      <td>nom et adresse de l’autorité ayant délivré votre autorisation d’exercer</td>
+      </tr>
+      <tr>
+      <th scope="row">Pour les activités réglementées  </th>
+      <td>
+      <ul>
+      <li>référence aux règles professionnelles applicables pour son activité réglementée </li>
+      <li>titre professionnel</li>
+      <li>État membre dans lequel a été octroyé le titre professionnel</li>
+      <li>nom de l'ordre ou de l'organisme professionnel auprès duquel elle est inscrite</li>
+      </ul>
+      </td>
+    </tr>
+  </tbody>
+</table>
 
 
 
