--- a/templates/app/view/cgu.html.twig
+++ b/templates/app/view/cgu.html.twig
@@ -4,7 +4,57 @@
 {% block body %}
 <center id="cgu"><h1>Conditions générales de ventes</h1></center>
 
-
+<h2 id="ancre1">1. Les conditions générales d’utilisation du site web sont-elles obligatoires ?</h2>
+<p>&nbsp;</p>
+<p>La loi impose certaines mentions obligatoires sur un site Internet :</p>
+<ul>
+<li>Des mentions légales qui permettent d’identifier l’éditeur et l’hébergeur du site.</li>
+<li>Des conditions générales de vente (CGV)</a> lorsque le site vend des produits ou des services en ligne. Les CGV du site de e-commerce</a> constituent le contrat qui lie l’éditeur du site avec le client consommateur. A noter : si le site vend uniquement à des professionnels (B2B), les CGV ne sont pas obligatoires.</li>
+<li>La politique de confidentialité des données dès lors que l’éditeur collecte et traite des données personnelles de l’utilisateur du site. La politique de confidentialité doit être conforme au nouveau .</li>
+<li>Les informations relatives aux cookies, le cas échéant.</li>
+</ul>
+<p>&nbsp;</p>
+<p>Les <strong>conditions générales d’utilisation</strong> ne figurent pas parmi les mentions obligatoires du site.</p>
+<p>&nbsp;</p>
+<h3>CGU : définition</h3>
+<p>&nbsp;</p>
+<p>Comme leur nom l’indique, les conditions générales d’utilisation définissent et encadrent les modalités d’accès et de navigation sur le site Internet, et déterminent les droits et les obligations respectifs de l’utilisateur et de l’éditeur dans le cadre de l’utilisation du site. <strong>Les CGU ne sont pas obligatoires</strong>.</p>
+<p>&nbsp;</p>
+<h3>Les CGU : facultatives mais recommandées</h3>
+<p>&nbsp;</p>
+<p><strong>Les conditions générales d’utilisation sont recommandées</strong> dans la mesure où :</p>
+<ul>
+<li>Elles permettent d’informer l’utilisateur sur le contenu du site, l’étendue des services proposés, les modalités de navigation… Exemple : les CGU peuvent décrire les étapes de création d’un compte utilisateur.</li>
+<li>Elles peuvent contenir des clauses visant à limiter la responsabilité de l’éditeur, qui s’offre ainsi une protection optimale. Exemple : l’éditeur n’est pas responsable en cas d’interruption de l’accès au site.</li>
+<li>Elles peuvent regrouper l’ensemble des mentions obligatoires du site : <strong>CGV</strong>, <strong>mentions légales</strong>, <strong>politique des données</strong> et <strong>cookies</strong>.</li>
+</ul>
+<p>&nbsp;</p>
+<h2 id="ancre2">2. Contenu et validité des conditions générales d’utilisation</h2>
+<p>&nbsp;</p>
+<p>Pour être utiles et efficaces, les conditions générales d’utilisation doivent d’une part comporter les mentions pertinentes, d’autre part être acceptées par l’internaute qui utilise le site.</p>
+<p>&nbsp;</p>
+<h3>Comment rédiger ses CGU ?</h3>
+<p>&nbsp;</p>
+<p>Les conditions générales d’utilisation doivent être rédigées dans le respect des dispositions légales applicables : en aucun cas une clause ne peut déroger aux dispositions d’ordre public. Au-delà de cet impératif, l’éditeur du site peut prévoir toute mention utile pour informer l’internaute sur le contenu du site d’une part, se protéger contre d’éventuels litiges avec l’utilisateur d’autre part.</p>
+<p>Le contenu des CGU inclut notamment :</p>
+<ul>
+<li><strong>La description du site </strong>: les conditions générales d’utilisation peuvent préciser l’objectif du site et décrire les services proposés. Attention à prévoir une description large, pour s’éviter d’avoir à modifier les CGU à chaque évolution du site.</li>
+<li><strong>Les droits et les obligations de l’utilisateur</strong> : les droits de l’utilisateur peuvent concerner notamment sa marge de manœuvre au moment de la création d’un espace personnel. Ses obligations peuvent inclure l’obligation de maintenir le caractère confidentiel de ses identifiants de connexion, l’obligation d’utiliser le site conformément à sa destination, l’obligation de ne pas tenter de nuire au bon fonctionnement du site… Ces dispositions des conditions générales d’utilisation permettent d’engager sa responsabilité en cas de dommage résultant du non-respect desdites obligations.</li>
+<li><strong>Les droits et les obligations de l’éditeur </strong>: les conditions générales d’utilisation mettent en général des obligations de moyens à la charge de l’éditeur. Maintenir l’accès au site, assurer le bon fonctionnement du site… Les CGU sont aussi l’occasion pour l’éditeur de se décharger de sa responsabilité en cas d’utilisation frauduleuse du site par un tiers, par exemple.</li>
+<li><strong>Les conditions d’utilisation du forum </strong>ou d’un espace de libre échange : lorsque l’utilisateur est autorisé à publier lui-même du contenu sur le site, les conditions générales d’utilisation du site encadrent cet espace de libre échange. L’éditeur, notamment, peut limiter sa responsabilité de manière à ne pas être tenu responsable en cas de propos injurieux ou de publication de contenu contrefaisant les droits de propriété intellectuelle d’un tiers.</li>
+<li><strong>La responsabilité limitée de l’éditeur quant aux liens hypertextes </strong>: des liens de redirection du site peuvent pointer vers des sites tiers. Les conditions générales d’utilisation précisent le lien juridique entre le site et le site tiers, et permettent de décharger l’éditeur de sa responsabilité en cas de contenu illicite sur le site tiers vers lequel le lien hypertexte redirige.</li>
+<li>Un rappel du droit de la propriété intellectuelle : les conditions générales d’utilisation rappellent aux internautes que les éléments du site – textes, vidéos, images… – sont protégés par le droit d’auteur et que leur utilisation sans autorisation préalable expresse est interdite.</li>
+<li>Un rappel sur la force majeure : la force majeure, un évènement extérieur imprévisible et insurmontable, exonère les parties de leurs responsabilités respectives. Cette disposition est d’ordre public.</li>
+<li>
+<p><strong>Les modalités de règlement des litiges </strong>: l’éditeur peut mentionner qu’en cas de litige, les parties tenteront de régler le conflit à l’amiable. A défaut de règlement amiable, l’éditeur doit respecter les règles d’attribution de compétence matérielle et territoriale. Par exemple : le consommateur doit avoir le choix entre le tribunal de son domicile ou le tribunal du lieu de la société éditrice du site.</p>
+</li>
+</ul>
+<h3>Faire accepter les conditions générales d’utilisation&nbsp;</h3>
+<p>&nbsp;</p>
+<p>Les conditions générales d’utilisation n’ont une valeur légale qu’à condition d’être acceptées par l’internaute au moment d’entrer sur le site. <strong>L’acceptation des CGU</strong> peut être matérialisée par une case à cocher, de type : « En cochant cette case, vous certifiez avoir lu et accepté sans réserve les présentes ».</p>
+<p>Attention : à chaque <strong>modification ou mise à jour des CGU</strong>, l’éditeur du site doit veiller à faire accepter les nouveaux termes aux utilisateurs.</p>
+<p>&nbsp;</p>
+<p>Vous venez de <strong>créer un site e-commerce</strong> ou vous envisagez de le faire ? Pensez à rédiger des CGU personnalisées et adaptées à votre activité. Captain Contrat vous accompagne.</p>
 
 
 
